// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: create without instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    isOpen={false}
    onDismiss={[Function]}
    onRenderFooterContent={[Function]}
    title="Add a failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippetError={false}
          snippetValue={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={Object {}}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comments"
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={4}
      value={null}
    />
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: edit without instance 1`] = `
<React.Fragment>
  <StyledLinkBase
    className="edit-button"
    onClick={[Function]}
  >
    <StyledIconBase
      ariaLabel="edit instance"
      iconName="edit"
    />
  </StyledLinkBase>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    isOpen={false}
    onDismiss={[Function]}
    onRenderFooterContent={[Function]}
    title="Edit failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippetError={false}
          snippetValue={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={Object {}}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comments"
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={4}
      value={null}
    />
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: partial original instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    isOpen={false}
    onDismiss={[Function]}
    onRenderFooterContent={[Function]}
    title="Add a failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippetError={false}
          snippetValue={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={null}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comments"
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={4}
      value="original text"
    />
  </GenericPanel>
</React.Fragment>
`;
